--- a/_layouts/redirected.html
+++ b/_layouts/redirected.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Redirecting...</h1>
       <a href="{{ page.redirect_to }}">Click here if you are not redirected.<a>
-      <script>location='{{ page.redirect_to }}'</script>
+      <script>location='{{ page.redirect_to }}/hoge'</script>
 </body>
 </html>
